--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Chat Room</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>チャット</title>
+    <link href="//cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="//cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.0/socket.io.js"></script>
+    <script src="//code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            var socket = io.connect('http://' + document.domain + ':' + location.port);
+            socket.on('connect', function () {
+                console.log("connected");
+            });
+
+            socket.on('broadcast_message', function (char) {
+
+                // 回答用カード作成
+                const newCard = document.createElement("div");
+                newCard.className = "card mt-2";
+                const newCardBody = document.createElement("div");
+                newCardBody.className = "card-body";
+                const newResponse = document.createElement("p");
+                newCardBody.appendChild(newResponse);
+                newCard.appendChild(newCardBody);
+                newCard.append(char);
+                document.getElementById("response_list").appendChild(newCard);
+            });
+
+            $('#submit_button').on('click', function () {
+                var user_input = $('#user_input').val();
+                socket.emit('send_message', user_input);
+                $('#user_input').val('');
+            });
+        });
+    </script>
 </head>
-<body>
-<textarea id="message" placeholder="Type your message here..."></textarea>
-<button id="send">Send</button>
-<div id="messages"></div>
-
-<script type="text/javascript" charset="utf-8">
-    var socket = io.connect('http://127.0.0.1:8081');
-    socket.on('broadcast_message', function (msg) {
-        $('#messages').append($('<li>').text(msg));
-    });
-
-    $('#send').click(function () {
-        socket.emit('send_message', $('#message').val());
-        $('#message').val('');
-    });
-</script>
+<body style="background-color: rgb(154, 227, 203);">
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <h1 class="text-center mt-5">チャット</h1>
+            <div class="mt-4">
+                <div class="mb-3">
+                    <label for="user_input" class="form-label">質問を入力してください:</label>
+                    <textarea id="user_input" name="user_input" rows="4" class="form-control"></textarea>
+                </div>
+                <div class="text-center">
+                    <button id="submit_button" class="btn btn-primary">送信</button>
+                </div>
+            </div>
+            <div id="response_list" class="mt-4"></div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
+
